2022-10-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-alpha01: Twit';git push
	git tag -a 5.1.2-alpha01 -m 'Functionally identical to 5.1.1';git push --tags

	* NCO 5.1.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1: Tangentially Speaking';git push
	git tag -a 5.1.1 -m 'all: stdin, -o fl_out, ncz2psx, nsb->nesb, bgr->btg, bgb->bgr, cdc_lst_bld fix; ncclimo: rgn_avg; ncremap: chk_map bln xcp, fix idw, mpas add_fll, no_add_fll, msk sgs, vrt ntp 1D, vrt_xtr mth=zero,lnr, dpr correct_areas, mono3';git push --tags

2022-10-21  Charlie Zender  <zender@uci.edu>

	* Makefile.old implement ANTLR_LIB_FLG ANTLR_INC_FLG to fix Andes build

	* NCO 5.1.1-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-beta01: Pancreatic';git push
	git tag -a 5.1.1-beta01 -m 'all: stdin, -o fl_out, ncz2psx, nsb->nesb, bgr->btg, bgb->bgr, cdc_lst_bld fix; ncclimo: rgn_avg; ncremap: chk_map bln xcp, fix idw, mpas add_fll, no_add_fll, msk sgs, vrt ntp 1D, vrt_xtr mth=zero,lnr', dpr correct_areas, mono3;git push --tags

	* Document stdin, NCZarr, rgn_avg, chk_map, add_fll, msk_apl, vrt_xtr

2022-10-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha13 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha13: Faint';git push
	git tag -a 5.1.1-alpha13 -m 'ncremap: add_fll mpaso, landmask fix, --no_add_fll, msk sgs < rnr_thr';git push --tags

	* ncremap re-compute ELM/CICE area variable in model-native units iff no_cll_msr != Yes

	* ncap2 create dummy input and output files when no filenames provided

	* ncremap add_fll place _FillValue where sgs_frc_out < rnr_thr = wgt_vld_thr (if provided)

	* ncremap add --no_add_fll switch to override new MPAS default

2022-10-19  Charlie Zender  <zender@uci.edu>

	* ncremap set add_fll automatically for all MPAS datasets

	* ncremap do not set default mask for sgs to landmask for back-compatibility, leave it unset
