@@ -177,7 +177,6 @@ programs are properly installed at your site, the command
 should give you access to the complete manual, except for the
 TeX-intensive portions.
 
-.BR ncap (1), 
 .BR ncap2 (1), 
 .BR ncatted (1), 
 .BR ncbo (1), 
@@ -185,6 +184,7 @@ TeX-intensive portions.
 .BR nces (1), 
 .BR ncecat (1), 
 .BR ncflint (1), 
+.BR ncz2psx (1), 
 .BR ncks (1), 
 .BR nco (1), 
 .BR ncpdq (1), 
